--- a/back/src/docs/asciidoc/index.adoc
+++ b/back/src/docs/asciidoc/index.adoc
@@ -46,7 +46,7 @@ include::{snippets}/edit-user/response-fields.adoc[]
 ***
 == QuestionController
 
-=== 질문 전체 목록 조회
+=== 특정 페이지 15개 질문 목록 조회
 .curl-request.adoc
 include::{snippets}/get-allQuestions/curl-request.adoc[]
 .http-request.adoc
@@ -55,6 +55,8 @@ include::{snippets}/get-allQuestions/http-request.adoc[]
 include::{snippets}/get-allQuestions/http-response.adoc[]
 .httpie-request.adoc
 include::{snippets}/get-allQuestions/httpie-request.adoc[]
+.path-parameters.adoc
+include::{snippets}/get-allQuestions/path-parameters.adoc[]
 .request-fields.adoc
 include::{snippets}/get-allQuestions/request-fields.adoc[]
 .response-fields.adoc
@@ -116,6 +118,8 @@ include::{snippets}/get-questionUpdatePage-byQuestionId/http-response.adoc[]
 include::{snippets}/get-questionUpdatePage-byQuestionId/httpie-request.adoc[]
 .path-parameters.adoc
 include::{snippets}/get-questionUpdatePage-byQuestionId/path-parameters.adoc[]
+.response-fields.adoc
+include::{snippets}/get-questionUpdatePage-byQuestionId/response-fields.adoc[]
 
 === 질문 수정
 include::{snippets}/patch-question-byQuestionId/curl-request.adoc[]
@@ -147,7 +151,6 @@ include::{snippets}/delete-question-byQuestionId/httpie-request.adoc[]
 .path-parameters.adoc
 include::{snippets}/delete-question-byQuestionId/path-parameters.adoc[]
 
-***
 == AnswerController
 === 아이디로 답변 조회
 include::{snippets}/get-answer-byAnswerId/curl-request.adoc[]
@@ -183,7 +186,7 @@ include::{snippets}/post-saveAnswer-byQuestionId/response-body.adoc[]
 .response-fields.adoc
 include::{snippets}/post-saveAnswer-byQuestionId/response-fields.adoc[]
 
-=== 답변 페이지 이동
+=== 답변 수정 페이지 이동
 include::{snippets}/get-answerPage-byAnswerId/curl-request.adoc[]
 .http-request.adoc
 include::{snippets}/get-answerPage-byAnswerId/http-request.adoc[]
@@ -193,6 +196,8 @@ include::{snippets}/get-answerPage-byAnswerId/http-response.adoc[]
 include::{snippets}/get-answerPage-byAnswerId/httpie-request.adoc[]
 .path-parameters.adoc
 include::{snippets}/get-answerPage-byAnswerId/path-parameters.adoc[]
+.response-fields.adoc
+include::{snippets}/get-answerPage-byAnswerId/response-fields.adoc[]
 
 === 답변 수정
 include::{snippets}/patch-answer-byAnswerId/curl-request.adoc[]
